@@ -1,3 +1,9 @@
+2008-09-26  Frank Ch. Eigler  <fche@elastic.org>
+
+	BZ 6829: avoid calling unregister_uprobe() when responding
+	to a task-finder exec/exit callback, as uprobes likes to
+	clean such things up by itself.
+
 2008-09-12  Prerna Saxena  <prerna@linux.vnet.ibm.com>
 
 	BZ 3016 : Handling members of anonymous structs/unions
